dev-com-site_prism-chrome_capabilities

--- a/Aulas - SitePrism/Gemfile
+++ b/Aulas - SitePrism/Gemfile
@@ -3,5 +3,5 @@ source 'https://rubygems.org'
 gem 'cucumber'
 gem 'capybara'
 gem 'site_prism'
-gem 'selenium-webdriver'
+gem 'selenium-webdriver', '>= 4.1.0'
 gem 'rspec'
