dev-com-site_prism-yaml

--- a/Aulas - SitePrism/cucumber.yaml
+++ b/Aulas - SitePrism/cucumber.yaml
@@ -1,9 +1,12 @@
-default: -p prd
-default_hml: -p hml
+default: -p prd -p chrome
+default_hml: -p hml -p chrome
 
 # Environments
 hml: ENVIRONMENT="hml"
 prd: ENVIRONMENT="prd"
+
+# Browsers:
+chrome: BROWSER="chrome"
 
 # Visual Mode
 headless: HEADLESS="true"
